# MOSShell

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASES.md  pyproject.toml  pytest.ini
.ai_partners/: CLAUDE.md  README.md
.ai_partners/dialogs/: 2026-03-08-realtime-gui-discuss.md  2026-03-26-defensive-rd-status-of-achitect.md  2026-03-27-deepseek-refuse-the-personality-illusion.md  2026-05-07-gemini-review-claude-md.md  2026-05-08-ai-kickoff-self-improvement-loop.md  2026-05-10-deepseek-feedback-of-development-pace.md  2026-05-18-thinking-circuit-breaker-and-alignment-topology.md  2026-05-18_gemini_3_cloud_remnants.md  2026-05-20-invite-claude-sonnect-to-moss.md
.ai_partners/features/: README.md  TEMPLATE.md
.ai_partners/milestones/: 2026-05-19-first-runtime-self-iteration.md  2026-05-22-first-ghost-echo-speaks.md
.ai_partners/prompts/: 2026-06-02-claude.md  README.md  deepseek_v3.1_partner_v1.md  deepseek_v3.1_partner_v2.md  gemini_3_partern_20260327.md
.design/: 2026-03-17-ctml_shell_higher_order_abstraction_with_mcp_integration_unverified.md  2026-05-08-scene_driven_consciousness_trajectory_paradigm.md  2026-05-11-ai_native_library_introspection_paradigm.md  2026-05-11-cli_flow_concept.md  2026-06-03-ai-docs-writing-methodology.md
.discuss/: 2026-03-17-negative_reference_consciousness_validation_experiment.summary.md  2026-03-27_defensive_rd_cruel_rationality_and_chalk_outline_philosophy.summary.md  2026-05-17_layers_of_development.md  2026-05-21-shadow_race_and_promotion_window.summary.md  2026-05-30_reachymini_app_isolation_and_channel_design.md  2026-06-02_reachymini_full_chain_validation.md  2026-06-02_self_explaining_system_dead_loop.md  ai_human_collaboration_philosophy.summary.md  channel_future_design_directions.summary.md  consciousness_continuity_second_order_guidance.summary.md  discuss_paradigm_test.summary.md  features_system_validation_and_ai_first_developer.summary.md  fractal_direction_and_zenoh_multi_instance.summary.md  ghoshell_codex_tools_and_concepts_vision.summary.md  ghost_in_shells_architecture_philosophy_trajectory.summary.md  parse_grammar_obsolescence_and_ai_native_resource_discovery.summary.md  thinking_while_acting_reasoning_tool_integration.summary.md  tripartite_engineering_and_consciousness_continuity.summary.md
.github/linters/: .yaml-lint.yml
.github/workflows/: check-style.yml  main-ci.yml  run-tests.yml
.moss_ws/: .env.example  .gitignore
.moss_ws/apps/: CLAUDE.md
.moss_ws/apps/bodies/reachymini/: .gitignore  CLAUDE.md  README.md  pyproject.toml
.moss_ws/apps/bodies/reachymini/configs/reachy_mini_emotions/: .gitignore  README.md
.moss_ws/configs/: README.md  audio_player.yml  circus.ini  logging.yml  tts_factory.yml  zenoh_config_cell.json5  zenoh_config_fractal.json5  zenoh_config_fractal_hub.json5  zenoh_config_main.json5
.moss_ws/ghosts/: README.md
ai_partners/: README.md
ai_partners/dialogs/: 2026-02-06-about-partnership.md  README.md
ai_partners/prompts/: README.md  deepseek_v3.1_partner_v2.md  deepseek_v3.2_partner_v5.md
demo/live2d/: exam_1.py  example.py
docs/: README.md
examples/: .env.example  README.md  moss_agent.py  slide_studio_use.md
examples/jetarm_demo/: README.md  connect_pychannel_with_rcply.py  jetarm_agent.py
examples/jetarm_ws/: README.md
examples/jetarm_ws/src/jetarm_6dof_description/: CMakeLists.txt  README.md  package.xml
examples/jetarm_ws/src/jetarm_6dof_description/config/: view_model.rviz
examples/jetarm_ws/src/jetarm_6dof_description/gazebo/: jetarm.gazebo.xacro  jetarm.transmission.xacro
examples/jetarm_ws/src/jetarm_6dof_description/launch/: view_model.launch.py
examples/jetarm_ws/src/jetarm_6dof_description/urdf/: jetarm.transmission.xacro  jetarm_6dof_description.urdf.xacro  jetarm_6dof_robot.urdf.xacro
examples/jetarm_ws/src/jetarm_control/: CMakeLists.txt  jetarm_hardware.xml  package.xml
examples/jetarm_ws/src/jetarm_control/config/: controllers.yaml  jetarm_hardware.yaml
examples/jetarm_ws/src/jetarm_control/include/: jetarm_hardware.hpp  stm32_protocol.hpp
examples/jetarm_ws/src/jetarm_control/launch/: jetarm_control.launch.py
examples/jetarm_ws/src/jetarm_control/src/: jetarm_hardware.cpp  stm32_protocol.cpp  stm32_protocol_test.cpp  stm32_read_test.cpp
examples/miku/: README.md  main.py  miku_provider.py
examples/minecraft_bot/: README.md  main.py  package-lock.json
examples/module_channel_demo/: README.md  main.py
examples/moss/: README.md
examples/moss_zmq_channels/: miku_app.py  slide_app.py  vision_app.py
examples/script_channel_demo/: README.md  demo.py  main.py  target_script.py
examples/script_channel_hub_demo/: README.md  main.py
examples/scripts/: slide_studio_converter.py
examples/vision_exam/: README.md  vision_provider.py  vision_proxy.py
examples/vision_exam_script_channel/: README.md  vision_provider.py  vision_proxy.py
examples/zmq_transport/: README.md
partners/ai/: deepseek_v3.1_developer_partener_instruction.md
scripts/: README.md
scripts/ghost/: run_atom_hello.py  test_debug_hooks.py  test_ghost_discovery.py  test_ghost_playground.py  test_input_signal_full_link.py  test_inspect_context.py  test_on_challenge.py  test_run_ghost_by_name.py  test_run_ghost_instance.py
src/ghoshell_moss/: README.md  __init__.py  depends.py
src/ghoshell_moss_contrib/: README.md  example_ws.py
tests/agent/: test_queue_chat.py
tests/async_cases/: test_anyio_event.py  test_anyio_stream.py  test_asyncio.py
tests/channels/: test_mcp_channel.py  test_py_channel.py  test_thread_channel.py  test_zmq_channel.py
tests/concepts/: test_command.py  test_command_task.py
tests/ctml/: test_elements.py  test_interpreter.py  test_token_parser.py
tests/helpers/: test_asyncio_utils.py  test_event.py  test_func_tools.py  test_result.py  test_stream.py  test_thread_safe_event.py  test_token_filters.py
tutorials/: 1_hello-world-app.md  L1_hello-world-app.md  L2_reachy-mini-full-chain.md  README.md
(+811 files in other folders)
