[project]
name = "ghoshell-moss"
version = "0.1.0-beta"
description = "LLM-oriented operating system with streaming interpreting shell, and Intelligent Ghost inside it"
authors = [{ name = "thirdgerb" }, { name = "17wang" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "anyio>=4.12.1",
    "miniaudio>=0.67",
    "ghoshell-common>=0.5.0",
    "ghoshell-container>=0.3.1",
    "janus>=2.0.0",
    "jsonargparse>=4.48.0",
    "orjson>=3.11.8",
    "pillow>=12.1.0",
    "python-dateutil>=2.9.0.post0",
    "python-frontmatter>=1.1.0",
    "python-ulid>=3.1.0",
    "prompt-toolkit>=3.0.52",
    "typer>=0.24.1",
]

[project.optional-dependencies]
zmq = ["zmq>=0.0.0", "aiozmq>=1.0.0", "psutil>=7.2.1"]
mcp = [
    "fastmcp>=3.1.1",
]
wss = ["websockets>=15.0.1"]
redis = ["fakeredis>=2.32.1", "redis>=7.0.1"]
# todo: pyaudio 的实现如果要依赖, 要考虑重新定义位置.
audio = ["pulsectl>=24.12.0", "pyaudio>=0.2.14", "scipy>=1.15.3"]

# 所有测试性的依赖放一起. 注意, 由于 live2d-py 0.5.0 以上版本依赖 python 3.12, 所以需要设置本地 python
#contrib = [
#    "litellm>=1.78.5",
#    "live2d-py>=0.5.4,<0.6.0",
#    "mermaid-py>=0.8.1",
#    "mss>=10.1.0",
#    "prompt-toolkit>=3.0.52",
#    "pygame>=2.6.1",
#    "pyqt6>=6.10.2",
#    "python-mpv-jsonipc>=1.2.1",
#    "rich>=14.2.0",
#    "javascript>=1!1.2.6",
#    "opencv-python>=4.13.0.92",
#    "loadenv>=0.1.1",
#    "pymupdf>=1.27.1",
#]
host = [
    "circus>=0.19.0",
    "eclipse-zenoh>=1.8.0",
    "pydantic-ai>=1.90.0",
    "uv>=0.11.8",
    "uvloop>=0.22.1",
]


[project.scripts]
moss = "ghoshell_moss.cli:main_entry"
moss-cli = "ghoshell_moss.cli.cli_controller:main"
moss-repl = 'ghoshell_moss.cli.moss_debug_repl:moss_debug_repl_main'
moss-as-mcp = 'ghoshell_moss.cli.moss_as_mcp:main'
moss-as-fractal = 'ghoshell_moss.cli.moss_as_fractal:main'
moss-run-ghost = 'ghoshell_moss.cli.ghost_run:ghost_run_main'

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test_*", ".discuss*", ".design", ".memory"]

[tool.setuptools.package-data]
# 简化匹配逻辑，专注于非代码资源. by gemini 3
"ghoshell_moss.core.codex" = ["_features_templates/*.md"]
"ghoshell_moss.cli.docs" = ["**/*.md"]
"ghoshell_moss.host.stubs" = [
    "**/*.md",
    "**/.env.example",
    "**/.gitignore",
    "**/*.ini",
    "**/*.yaml",
    "**/*.toml", # 建议加上，万一以后有子配置
    "**/*.json",
    "**/*.jsonl",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "anyio>=4.10.0",
    "mcp>=1.21.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.37.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
]
