[project]
name = "ghoshell-moss"
version = "0.1.0-beta"
description = "LLM-oriented operating system with streaming interpreting shell, and Intelligent Ghost inside it"
authors = [{ name = "thirdgerb" }, { name = "17wang" }]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.12.1",
    "numpy>=2.0.0",
    "ghoshell-common>=0.5.0",
    "ghoshell-container>=0.3.1",
    "janus>=2.0.0",
    "jsonargparse>=4.48.0",
    "orjson>=3.11.8",
    "pillow>=12.1.0",
    "python-dateutil>=2.9.0.post0",
    "python-frontmatter>=1.1.0",
    "python-ulid>=3.1.0",

]

[project.optional-dependencies]
zmq = ["zmq>=0.0.0", "aiozmq>=1.0.0", "psutil>=7.2.1"]
redis = ["fakeredis>=2.32.1", "redis>=7.0.1"]
audio = ["pulsectl>=24.12.0", "pyaudio>=0.2.14", "scipy>=1.15.3"]

ghost = [
    "pydantic-ai>=1.90.0",
    "anthropic>=0.84.0",
]

host = [
    "prompt-toolkit>=3.0.52",
    "miniaudio>=0.67",
    "typer>=0.24.1",
    "circus>=0.19.0",
    "eclipse-zenoh>=1.8.0",
    "uv>=0.11.8",
    "uvloop>=0.22.1",
    "websockets>=15.0.1",
    "fastmcp>=3.1.1",
]

[project.scripts]
moss = "ghoshell_moss.cli:main_entry"
moss-cli = "ghoshell_moss.cli.cli_controller:main"
moss-repl = 'ghoshell_moss.cli.moss_debug_repl:moss_debug_repl_main'
moss-as-mcp = 'ghoshell_moss.cli.moss_as_mcp:main'
moss-as-fractal = 'ghoshell_moss.cli.moss_as_fractal:main'
moss-run-ghost = 'ghoshell_moss.cli.ghost_run:ghost_run_main'

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test_*", ".discuss*", ".design", ".memory"]

[tool.setuptools.package-data]
# 简化匹配逻辑，专注于非代码资源. by gemini 3
"ghoshell_moss.core.codex" = ["_features_templates/*.md"]
"ghoshell_moss.cli.docs" = ["**/*.md"]
"ghoshell_moss.host.stubs" = [
    "**/*.md",
    "**/.env.example",
    "**/.gitignore",
    "**/*.ini",
    "**/*.yaml",
    "**/*.toml", # 建议加上，万一以后有子配置
    "**/*.json",
    "**/*.jsonl",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "anyio>=4.10.0",
    "mcp>=1.21.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.37.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pre-commit>=4.6.0",
]
