[project]
name = "reachy-mini-body"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ghoshell-moss[host]",
    "reachy-mini>=1.3.1",
    "reachy-mini-dances-library>=0.2.1",
]

[tool.uv]
override-dependencies = [
    "huggingface-hub>=1.3.4",
    "numpy<2.3",
]

[tool.uv.sources]
ghoshell-moss = { path = "../../../..", editable = true }
