<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>jetarm_6dof_description</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="thirdgerb@gmail.com">ubuntu</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>


    <!-- 这些工具用于解析 xacro 文件和启动文件 -->
    <exec_depend>xacro</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <!-- 这些包用于将URDF发布到ROS参数服务器并启动机器人状态发布者 -->
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>

    <!-- 这是我们的可视化工具 -->
    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
